--- a/settings.html
+++ b/settings.html
@@ -86,9 +86,44 @@
   </div>
   
   <div class="section">
-    <label for="apiKey">API Key (Optional)</label>
-    <input type="password" id="apiKey" placeholder="Leave empty if not required" />
-    <div class="help">If your API requires authentication, enter your API key here</div>
+    <label for="apiKey">API Key</label>
+    <input type="password" id="apiKey" placeholder="Paste your API key here" />
+    <div class="help">
+      <strong>How to get your API key:</strong><br>
+      1. Go to your ResAid dashboard<br>
+      2. Scroll to "Chrome Extension API Key" section<br>
+      3. Click "Copy" to copy your API key<br>
+      4. Paste it here and save
+    </div>
+  </div>
+
+  <div class="section">
+    <h2 style="margin-top: 0; margin-bottom: 16px;">👤 Personal Information</h2>
+    <p class="help" style="margin-bottom: 16px;">
+      This info will be auto-filled in common form fields. Click "Fetch from Resume" to extract from your uploaded resume.
+    </p>
+    
+    <button id="fetchProfileBtn" style="margin-bottom: 20px; padding: 10px 20px;">
+      📥 Fetch from Resume
+    </button>
+
+    <label for="fullName">Full Name</label>
+    <input type="text" id="fullName" placeholder="John Doe" />
+
+    <label for="email" style="margin-top: 12px;">Email</label>
+    <input type="email" id="email" placeholder="john@example.com" />
+
+    <label for="phone" style="margin-top: 12px;">Phone</label>
+    <input type="tel" id="phone" placeholder="+1 (555) 123-4567" />
+
+    <label for="linkedin" style="margin-top: 12px;">LinkedIn URL</label>
+    <input type="url" id="linkedin" placeholder="https://linkedin.com/in/johndoe" />
+
+    <label for="location" style="margin-top: 12px;">Location</label>
+    <input type="text" id="location" placeholder="Toronto, ON" />
+
+    <label for="currentCompany" style="margin-top: 12px;">Current Company</label>
+    <input type="text" id="currentCompany" placeholder="Acme Corp" />
   </div>
   
   <button id="saveBtn">Save Settings</button>
