feat: add initial chrome extension almost complete

--- a/settings.html
+++ b/settings.html
@@ -110,17 +110,42 @@
     <label for="fullName">Full Name</label>
     <input type="text" id="fullName" placeholder="John Doe" />
 
+    <label for="firstName" style="margin-top: 12px;">First Name</label>
+    <input type="text" id="firstName" placeholder="John" />
+
+    <label for="lastName" style="margin-top: 12px;">Last Name</label>
+    <input type="text" id="lastName" placeholder="Doe" />
+
     <label for="email" style="margin-top: 12px;">Email</label>
     <input type="email" id="email" placeholder="john@example.com" />
 
-    <label for="phone" style="margin-top: 12px;">Phone</label>
-    <input type="tel" id="phone" placeholder="+1 (555) 123-4567" />
+    <label for="phone" style="margin-top: 12px;">Phone Number</label>
+    <input type="tel" id="phone" placeholder="555-123-4567" />
+
+    <label for="countryPhoneCode" style="margin-top: 12px;">Country Phone Code</label>
+    <input type="text" id="countryPhoneCode" placeholder="+1" />
+
+    <label for="extension" style="margin-top: 12px;">Phone Extension</label>
+    <input type="text" id="extension" placeholder="1234" />
+
+    <label for="city" style="margin-top: 12px;">City</label>
+    <input type="text" id="city" placeholder="Toronto" />
+
+    <label for="postalCode" style="margin-top: 12px;">Postal Code</label>
+    <input type="text" id="postalCode" placeholder="M5H 2N2" />
+
+    <label for="location" style="margin-top: 12px;">Address Line 1</label>
+    <input type="text" id="location" placeholder="123 Main Street" />
+    <label for="addressLine2" style="margin-top: 12px;">Address Line 2</label>
+    <input type="text" id="addressLine2" placeholder="Apt 4B (optional)" />
+    <label for="country" style="margin-top: 12px;">Country</label>
+    <input type="text" id="country" placeholder="CA" />
+
+    <label for="province" style="margin-top: 12px;">Province or Territory</label>
+    <input type="text" id="province" placeholder="Ontario" />
 
     <label for="linkedin" style="margin-top: 12px;">LinkedIn URL</label>
     <input type="url" id="linkedin" placeholder="https://linkedin.com/in/johndoe" />
-
-    <label for="location" style="margin-top: 12px;">Location</label>
-    <input type="text" id="location" placeholder="Toronto, ON" />
 
     <label for="currentCompany" style="margin-top: 12px;">Current Company</label>
     <input type="text" id="currentCompany" placeholder="Acme Corp" />
