--- a/popup.html
+++ b/popup.html
@@ -237,6 +237,73 @@
     .insight-missing {
       border-left-color: #f44336;
     }
+
+    .skills-gap-section {
+      margin-top: 15px;
+      padding: 12px;
+      background: #fff8e1;
+      border-radius: 8px;
+      border-left: 4px solid #fbc02d;
+    }
+
+    .gap-title {
+      font-size: 12px;
+      font-weight: 600;
+      color: #f57f17;
+      margin-bottom: 8px;
+    }
+
+    .gap-item {
+      display: flex;
+      justify-content: space-between;
+      align-items: center;
+      margin: 6px 0;
+      padding: 6px;
+      background: white;
+      border-radius: 4px;
+      font-size: 12px;
+    }
+
+    .gap-skill {
+      flex: 1;
+      font-weight: 500;
+      color: #333;
+    }
+
+    .gap-impact {
+      background: linear-gradient(135deg, #667eea 0%, #764ba2 100%);
+      -webkit-background-clip: text;
+      -webkit-text-fill-color: transparent;
+      font-weight: 600;
+      font-size: 11px;
+    }
+
+    .gap-empty {
+      text-align: center;
+      color: #999;
+      font-size: 12px;
+      padding: 8px;
+    }
+
+    .tracker-link {
+      display: inline-block;
+      margin-top: 10px;
+      padding: 8px 12px;
+      background: linear-gradient(135deg, #667eea 0%, #764ba2 100%);
+      color: white;
+      border: none;
+      border-radius: 6px;
+      font-size: 12px;
+      cursor: pointer;
+      text-decoration: none;
+      font-weight: 600;
+      transition: all 0.3s ease;
+    }
+
+    .tracker-link:hover {
+      transform: translateY(-2px);
+      box-shadow: 0 4px 12px rgba(102, 126, 234, 0.4);
+    }
   </style>
 </head>
 <body>
@@ -299,6 +366,13 @@
       </div>
 
       <div id="scoreInsights" class="score-insights"></div>
+
+      <div id="skillsGapSection" class="skills-gap-section" style="display: none;">
+        <div class="gap-title">📚 Skills to Add</div>
+        <div id="skillsGapList"></div>
+      </div>
+
+      <button id="openTrackerBtn" class="tracker-link" style="margin-top: 10px;">📊 Open Application Tracker</button>
     </div>
     
     <!-- Resume Selection -->
