feat: extension update

--- a/popup.html
+++ b/popup.html
@@ -394,6 +394,22 @@
       <button id="enableAutofill">Smart Autofill</button>
     </div>
     
+    <!-- Applications Tracker -->
+    <div class="section">
+      <div class="section-title" style="display: flex; justify-content: space-between; align-items: center;">
+        <span>📋 Applications Tracker</span>
+        <button id="toggleApplications" style="background: none; border: none; color: #667eea; cursor: pointer; font-size: 14px;">▼</button>
+      </div>
+      <div id="applicationsList" style="display: none; margin-top: 12px;">
+        <div id="applicationsContent">
+          <div style="text-align: center; color: #666; font-size: 14px; padding: 20px;">
+            Loading applications...
+          </div>
+        </div>
+        <button id="viewAllApplications" style="width: 100%; padding: 8px; margin-top: 12px; background: #f0f0f0; border: 1px solid #ddd; border-radius: 6px; cursor: pointer; font-size: 14px;">View All Applications</button>
+      </div>
+    </div>
+    
     <div class="settings-link" id="settingsLink">⚙️ Extension Settings</div>
   </div>
 
